[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/background/BG_T.png.png" type="Texture" id=1]
[ext_resource path="res://Early GameBoy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://main_screen/SelectStage.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="SelectStage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 160.0
margin_bottom = 144.0
color = Color( 1, 0.964706, 0.827451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 80, 72 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 80, 72 )
texture = ExtResource( 1 )
flip_v = true

[node name="Label" type="Label" parent="."]
margin_left = 6.0
margin_top = 1.0
margin_right = 190.0
margin_bottom = 21.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.486275, 0.247059, 0.345098, 1 )
text = "select stage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 3.0
margin_top = 24.0
margin_right = 101.0
margin_bottom = 42.0
color = Color( 0.486275, 0.247059, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 5.0
margin_top = 26.0
margin_right = 125.0
margin_bottom = 46.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.921569, 0.419608, 0.435294, 1 )
text = "stage 01"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 52.0
margin_right = 114.0
margin_bottom = 70.0
color = Color( 0.486275, 0.247059, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 18.0
margin_top = 54.0
margin_right = 138.0
margin_bottom = 74.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.921569, 0.419608, 0.435294, 1 )
text = "stage 02"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 34.0
margin_top = 83.0
margin_right = 132.0
margin_bottom = 101.0
color = Color( 0.486275, 0.247059, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 36.0
margin_top = 85.0
margin_right = 156.0
margin_bottom = 105.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.921569, 0.419608, 0.435294, 1 )
text = "stage 03"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 54.0
margin_top = 119.0
margin_right = 152.0
margin_bottom = 137.0
color = Color( 0.486275, 0.247059, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 60.0
margin_top = 121.0
margin_right = 180.0
margin_bottom = 141.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.921569, 0.419608, 0.435294, 1 )
text = "ENDLESS"
__meta__ = {
"_edit_use_anchors_": false
}
